--- a/server/RunJavaBridge.c.in
+++ b/server/RunJavaBridge.c.in
@@ -62,7 +62,7 @@ int main(int argc, char**_argv){
       argv[i]=stringdup(_argv[i+1]);
     argv[i]=0;
   }
-  execv(argv[0], argv);
+  if(*argv[0]=='/') execv(argv[0], argv); else execvp(argv[0], argv);
   fprintf(stderr, "Could not execute %s: %s\n", argv[0], strerror(errno));
   return 2;
 }
