--- a/server/RunMonoBridge.c.in
+++ b/server/RunMonoBridge.c.in
@@ -36,21 +36,21 @@ char *java="mono";
 int main(int argc, char**_argv){
   char **argv;
   char *vm;
-  if(argc<3 && argc!=2) usage(_argv[0]);
+  if(argc<4 && argc!=2) usage(_argv[0]);
 
   if(strlen(java)==3&&!strcmp("yes",java))
     vm = stringcat(EXTENSION_DIR, "/mono");
   else 
     vm = stringdup(java);
 
-  if(argc==3 || argc==2) {
-    argv=calloc(5, sizeof*argv);
+  if(argc==4 || argc==2) {
+    argv=calloc(6, sizeof*argv);
     argv[0]=vm;
     argv[1]=stringdup(EXTENSION_DIR/**/"/MonoBridge.exe");
     argv[2]=argc==2?stringdup("INET:0"):stringdup(_argv[1]); /* socketname */
-    argv[2]=argc==2?stringdup("2"):stringdup(_argv[1]); /* logLevel */
-    argv[3]=stringdup(_argv[argc==2?1:2]); /* logFile */
-    argv[4]=0;			/* last arg */
+    argv[3]=argc==2?stringdup("2"):stringdup(_argv[2]); /* logLevel */
+    argv[4]=stringdup(_argv[argc==2?1:3]); /* logFile */
+    argv[5]=0;			/* last arg */
   } else {
     int i;
     argv=calloc(argc, sizeof*argv);
@@ -58,7 +58,7 @@ int main(int argc, char**_argv){
       argv[i]=stringdup(_argv[i+1]);
     argv[i]=0;
   }
-  execv(argv[0], argv);
+  if(*argv[0]=='/') execv(argv[0], argv); else execvp(argv[0], argv);
   fprintf(stderr, "Could not execute %s: %s\n", argv[0], strerror(errno));
   return 2;
 }
