--- a/init_cfg.h.in
+++ b/init_cfg.h.in
@@ -53,5 +53,6 @@
 #define EXT_TSRMG(id, type, element) TSRMG(id, type, element)
 #define EXT_FE(name, arg_info) ZEND_FE(name, arg_info)
 #define EXT_MALIAS(classname, name, alias, arg_info, flags) ZEND_MALIAS(classname, name, alias, arg_info, flags)
+#define EXT_FALIAS(name, alias, arg_types) ZEND_FALIAS(name, alias, arg_types)
 
 #endif
