--- a/server/configure.in
+++ b/server/configure.in
@@ -24,7 +24,8 @@ AC_STDC_HEADERS
 AC_ARG_WITH(java,  [  --with-java[[=JAVA_HOME]]	Include java support], PHP_JAVA="$withval", PHP_JAVA="yes")
 AC_ARG_WITH(mono,  [  --with-mono[[=ikvmc.exe location]]             Include mono support], PHP_MONO="$withval", PHP_MONO="no")
 AC_ARG_WITH(extdir,  [  --with-extdir[[=DIR]]	Directory which contains the shared java extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
-AC_ARG_ENABLE(servlet,  [  --enable-servlet[[=JAR]]	JAR must be j2ee.jar or servlet.jar which contains the servlet classes], SERVLET="$enableval", SERVLET="yes")
+AC_ARG_ENABLE(servlet,  [  --enable-servlet[[=JAR]]	JAR must be j2ee.jar or servlet.jar which contains the servlet classes], SERVLET="$enableval", SERVLET="no")
+AC_ARG_ENABLE(script,  [  --enable-script[[=JAR]]	If you use JDK < 1.6 JAR must be script-api.jar which contains the jsr223 script api], SCRIPT="$enableval", SCRIPT="yes")
 
 
 JAVA_FUNCTION_CHECKS
@@ -74,6 +75,14 @@ if test "$SERVLET" = "yes"; then
   fi
 fi
 
+JAVA_BRIDGE_SCRIPT_JAR="php-script.jar"
+if test "$SCRIPT" = "no"; then
+  JAVA_BRIDGE_SCRIPT_JAR=""
+fi
+if test "$SCRIPT" = "yes"; then
+  SCRIPT="../unsupported/script-api.jar"
+fi
+
 AC_CONFIG_FILES([RunJavaBridge.c RunMonoBridge.c php/java/bridge/global.properties])
 AC_SUBST(AM_CPPFLAGS)
 AC_SUBST(EXTENSION_DIR)
@@ -85,6 +94,8 @@ AC_SUBST(VM_BINARIES)
 AC_SUBST(MONO_BRIDGE_EXE)
 AC_SUBST(SERVLET)
 AC_SUBST(JAVA_BRIDGE_WAR)
+AC_SUBST(SCRIPT)
+AC_SUBST(JAVA_BRIDGE_SCRIPT_JAR)
 AM_CONDITIONAL([COND_GCJ], [test "$PHP_MONO" != "no" || test "$PHP_JAVA" = "yes"])
 AC_OUTPUT(Makefile)
 
